--- a/src/Template/cup/user/newsletter/form.twig
+++ b/src/Template/cup/user/newsletter/form.twig
@@ -39,7 +39,7 @@
                                     'type': 'select',
                                     'name': 'type',
                                     'args': {
-                                        'option': reference('/App/Domain/References/User::NEWSLETTER_TYPE'),
+                                        'option': collect(reference('/App/Domain/References/User::NEWSLETTER_TYPE')).combine(['Все', 'Пользователи', 'Подписчики']),
                                         'selected': reference('/App/Domain/References/User::NEWSLETTER_TYPE_ALL')
                                     }
                                 } %}
