--- a/src/Template/cup/catalog/category/form.twig
+++ b/src/Template/cup/catalog/category/form.twig
@@ -115,6 +115,29 @@
                                             }
                                         } %}
                                     </div>
+
+                                    <div class="col-md-3">
+                                        {% include 'cup/form.twig' with {
+                                            'label': 'Критерий сортировки',
+                                            'type': 'select',
+                                            'name': 'sort[by]',
+                                            'args': {
+                                                'option': collect(reference('/App/Domain/References/Catalog::ORDER_BY')).combine(['Заголовок', 'Цена', 'Наличие', 'Дата']),
+                                                'selected': item.sort['by']
+                                            }
+                                        } %}
+                                    </div>
+                                    <div class="col-md-3">
+                                        {% include 'cup/form.twig' with {
+                                            'label': 'Порядок сортировки',
+                                            'type': 'select',
+                                            'name': 'sort[direction]',
+                                            'args': {
+                                                'option': collect(reference('/App/Domain/References/Catalog::ORDER_DIRECTION')).combine(['По возрастанию', 'По убыванию']),
+                                                'selected': item.sort['direction']
+                                            }
+                                        } %}
+                                    </div>
                                 </div>
 
                                 <hr>
