--- a/src/Template/cup/guestbook/form.twig
+++ b/src/Template/cup/guestbook/form.twig
@@ -90,7 +90,7 @@
                                     'type': 'select',
                                     'name': 'status',
                                     'args': {
-                                        'option': reference('/App/Domain/Types/GuestBookStatusType::LIST'),
+                                        'option': collect(reference('/App/Domain/Types/UserStatusType::LIST')).combine(['Активный', 'Модерация']),
                                         'selected': item.status
                                     }
                                 } %}
