--- a/src/Template/cup/publication/category/form.twig
+++ b/src/Template/cup/publication/category/form.twig
@@ -133,7 +133,7 @@
                                     'type': 'select',
                                     'name': 'sort[direction]',
                                     'args': {
-                                        'option': collect(reference('/App/Domain/References/Publication::ORDER_DIRECTION')).combine(['По возрастанию', 'По убыванию']),
+                                        'option': collect(reference('/App/Domain/References/Publication::ORDER_DIRECTION')).combine(['По убыванию', 'По возрастанию']),
                                         'selected': item.sort['direction']
                                     }
                                 } %}
