--- a/src/Template/cup/user/index.twig
+++ b/src/Template/cup/user/index.twig
@@ -97,7 +97,8 @@
                         <table data-table class="table table-striped table-hover" style="width: 100%;">
                             <thead>
                                 <tr>
-                                    <th>Логин</th>
+                                    <th width="15%">Логин</th>
+                                    <th>Фамилия и имя</th>
                                     <th width="15%">Группа</th>
                                     <th width="15%">Дата регистрации</th>
                                     <th width="15%">Дата посещения</th>
@@ -117,7 +118,7 @@
                                             )
                                         }}
                                     ">
-                                        <td>
+                                        <td data-order="{{ user.username }}">
                                             {{ user.username }}
 
                                             {% if user.getAllowMail() %}
@@ -126,6 +127,7 @@
                                                 </div>
                                             {% endif %}
                                         </td>
+                                        <td>{{ user.getName() }}</td>
                                         <td>{{ user.group.title ?? '<code>Без группы</code>' }}</td>
                                         <td data-order="{{ user.register.getTimestamp() }}">{{ user.register|df('d.m.Y H:i:s') }}</td>
                                         <td data-order="{{ user.session.date.getTimestamp() }}">{{ user.session.date ? user.session.date|df('d.m.Y H:i:s') : '' }}</td>
