add user avatar uploading

--- a/src/Template/cup/form-image.twig
+++ b/src/Template/cup/form-image.twig
@@ -1,39 +1,49 @@
+{#
+    multiple - few images (default: true)
+#}
+{% if multiple is null %}
+    {% set multiple = true %}
+{% endif %}
+
 {% block fileimage %}
+
     <div data-fileimage class="row">
         <div class="col-md-12">
             {% include 'cup/form.twig' with {
-                'label': 'Изображения',
+                'label': multiple ? 'Изображения' : 'Изображение',
                 'type': 'file',
                 'name': 'files[]',
-                'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="Здесь можно выбрать несколько изображений"></i>',
+                'postfix': multiple ? '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="Здесь можно выбрать несколько изображений"></i>' : '',
                 'args': {
                     'class': ['d-block', 'btn', 'btn-sm', 'bg-grey2'],
-                    'multiple': true,
+                    'multiple': multiple,
                     'accept': 'image/*'
                 }
             } %}
 
             {% for relation in entity.getFiles() %}
                 <div class="d-inline-block p-2 m-2 bg-grey2 text-center rounded">
-                    <div class="pb-2">
-                        {% include 'cup/form.twig' with {
-                            'type': 'number',
-                            'name': 'files[' ~ relation.uuid.toString() ~ '][order]',
-                            'args': {
-                                'value': relation.order,
-                            }
-                        } %}
-
-                        {#<div class="col-12">
+                    {% if multiple %}
+                        <div class="pb-2">
                             {% include 'cup/form.twig' with {
-                                'type': 'textarea',
-                                'name': 'files[' ~ relation.uuid.toString() ~ '][comment]',
+                                'type': 'number',
+                                'name': 'files[' ~ relation.uuid.toString() ~ '][order]',
                                 'args': {
-                                    'placeholder': 'Комментарий к картинке..'
+                                    'value': relation.order,
                                 }
                             } %}
-                        </div>#}
-                    </div>
+
+                            {#<div class="col-12">
+                                {% include 'cup/form.twig' with {
+                                    'type': 'textarea',
+                                    'name': 'files[' ~ relation.uuid.toString() ~ '][comment]',
+                                    'args': {
+                                        'placeholder': 'Комментарий к картинке..'
+                                    }
+                                } %}
+                            </div>#}
+                        </div>
+                    {% endif %}
 
                     <a href="{{ relation.getPublicPath() }}" target="_blank">
                         <img class="rounded" height="100" src="{{ relation.getPublicPath('small') }}" alt="preview" data-toggle="tooltip" data-placement="top" title="{{ relation.getName() }} ({{ relation.getFileSize() }})" />
