--- a/src/Template/cup/sidebar.twig
+++ b/src/Template/cup/sidebar.twig
@@ -16,6 +16,11 @@
                     <i class="fas fa-tasks"></i>
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" data-toggle="tab" href="#cog">
+                    <i class="fas fa-cog"></i>
+                </a>
+            </li>
         </ul>
 
         <div class="tab-content mt-3">
@@ -67,6 +72,24 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            {# TAB: Cog #}
+            <div class="tab-chat tab-pane fade" id="cog">
+                <div class="quick-wrapper">
+                    <div class="quick-scroll scrollbar-outer">
+                        <div class="quick-content">
+                            <form action="/cup/task/run" method="post" class="row m-0" onsubmit="return confirm('Вы действительно хотите выполнить это действие сейчас?');">
+                                <button type="submit" name="task" value="App\Domain\Tasks\SearchIndexTask" class="col-12 btn btn-dark">
+                                    <div class="quick-actions-item">
+                                        <i class="fas fa-search"></i>
+                                        <span class="text">Обновить поисковый индекс</span>
+                                    </div>
+                                </button>
+                            </form>
                         </div>
                     </div>
                 </div>
