move donate btn and change text

--- a/src/Template/cup/donate.twig
+++ b/src/Template/cup/donate.twig
@@ -1,8 +1,4 @@
-<li class="nav-item">
-    <a href="#" class="nav-link" data-click="alert-donate">
-        <i class="fa fa-donate"></i>
-    </a>
-</li>
+<a href="#" class="nav-link" data-click="alert-donate"><i class="fa fa-donate"></i></a>
 
 <script>
     document.addEventListener('DOMContentLoaded', () => {
@@ -22,7 +18,7 @@
                     <p class="text-justify">
                         Мы принимаем пожертвования следующими способами:
                     </p>
-                    <div id="donate" class="mt-2">
+                    <div id="donate" class="my-2">
                         <div class="row">
                             <div class="col-12 col-md-6">
                                 <a href="https://yoomoney.ru/to/410011144467012" target="_blank" class="btn btn-link">
@@ -57,6 +53,17 @@
                             </div>
                         </div>
                     </div>
+
+                    <p class="text-justify">
+                        Если вы являетесь владельцем бизнеса который приносит доход, то спонсирование разработки WSE
+                        имеет смысл с точки зрения пользы: <b>это гарантирует, что проект, на который полагается ваш
+                        бизнес, остаётся здоровым и активно поддерживаемым</b>.
+                    </p>
+                    <p class="text-justify">
+                        Если вы — индивидуальный разработчик и используете WSE эффективно и с удовольствием,
+                        взгляните на пожертвование как на выражение признательности — как если бы вы угощали меня
+                         кофе время от времени :)
+                    </p>
                 `,
                 showCancelButton: true,
                 showConfirmButton: false,
