--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -42,11 +42,13 @@
                         <div class="container-fluid">
 
                             {% if user and ('cup:main' in user.group.access) %}
-                                <ul class="navbar-nav topbar-nav ml-md-auto align-items-center">
+                                <ul class="navbar-nav topbar-nav mr-md-auto align-items-center">
                                     <li class="nav-item submenu">
                                         {% include 'cup/donate.twig' %}
                                     </li>
+                                </ul>
 
+                                <ul class="navbar-nav topbar-nav ml-md-auto align-items-center">
                                     {% for plugin in plugins %}
                                         {% for param in plugin.getToolbarItem() %}
                                             {% if param.twig %}
