add new catalog product field type

--- a/src/Template/cup/catalog/product/index.twig
+++ b/src/Template/cup/catalog/product/index.twig
@@ -33,7 +33,7 @@
 
                         <a href="/cup/catalog/product/add{{ category ? '?category=' ~ category.uuid : '' }}" class="btn btn-primary btn-round ml-1">
                             <i class="fa fa-plus"></i>
-                            Добавить товар
+                            Добавить продукт
                         </a>
                     </div>
                 </div>
