--- a/src/Template/cup/catalog/product/form.twig
+++ b/src/Template/cup/catalog/product/form.twig
@@ -20,12 +20,12 @@
                             <a href="/cup/catalog/product/{{ category.uuid }}" class="btn btn-secondary btn-icon mr-1">
                                 <i class="fas fa-long-arrow-alt-left"></i>
                             </a>
-                            <div class="card-title">{{ item.uuid ? 'Редактирование товара ' ~ item.title : 'Создание нового товара' }}</div>
+                            <div class="card-title">{{ item.uuid ? 'Редактирование продукта ' ~ item.title : 'Создание нового продукта' }}</div>
 
                             <ul class="nav nav-pills nav-secondary nav-pills-no-bd ml-auto" role="tablist">
                                 <li class="nav-item">
                                     <a class="nav-link active show" data-toggle="pill" href="#product" role="tab">
-                                        Товар
+                                        Продукт
                                     </a>
                                 </li>
                                 <li class="nav-item">
@@ -56,7 +56,7 @@
                             {# Tab: Товар #}
                             <div class="tab-pane fade show active" id="product" role="tabpanel">
                                 <div class="row">
-                                    <div class="col-md-6">
+                                    <div class="col-12 col-md-6">
                                         {% include 'cup/form.twig' with {
                                             'label': 'Наименование',
                                             'type': 'text',
@@ -69,7 +69,7 @@
                                             }
                                         } %}
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-6 col-md-3">
                                         {% include 'cup/form.twig' with {
                                             'label': 'Категория',
                                             'type': 'select',
@@ -78,6 +78,17 @@
                                             'args': {
                                                 'option': categories.pluck('title', 'uuid').all(),
                                                 'selected': item.category ?? category.uuid
+                                            }
+                                        } %}
+                                    </div>
+                                    <div class="col-6 col-md-3">
+                                        {% include 'cup/form.twig' with {
+                                            'label': 'Тип',
+                                            'type': 'select',
+                                            'name': 'type',
+                                            'args': {
+                                                'option': collect(reference('/App/Domain/Types/Catalog/ProductTypeType::LIST')).combine(['Продукт', 'Услуга']),
+                                                'selected': reference('/App/Domain/Types/Catalog/ProductTypeType::TYPE_PRODUCT')
                                             }
                                         } %}
                                     </div>
