add cookie banner to main

--- a/theme/default/main.twig
+++ b/theme/default/main.twig
@@ -74,6 +74,7 @@
 
         {% include 'mixin/img-script.twig' %}
         {#{% include 'mixin/adbd.twig' %}#}
+        {% include 'mixin/cookies.twig' %}
         {% include 'mixin/catalog.twig' %}
         {% include 'mixin/recaptcha.twig' %}
     </body>
