--- a/theme/default/publication.short.twig
+++ b/theme/default/publication.short.twig
@@ -5,8 +5,9 @@
         <h2><a href="/{{ item.address }}">{{ item.title }}</a></h2>
         <div>
             <ul class="meta">
-                <li>{{ item.date|df }}</li>
-                <li><a href="{{ category.address }}">{{ category.title }}</a></li>
+                <li><a href="/{{ category.address }}">{{ category.title }}</a></li>
+                <li>{{ item.date|df }}</a></li>
+                <li>{{ item.user.getName('short') }}</li>
             </ul>
         </div>
         <div>
