--- a/src/Template/cup/donate.twig
+++ b/src/Template/cup/donate.twig
@@ -8,38 +8,40 @@
                 closeOnClickOutside: true,
                 title: `Поддержите разработку<br>WebSpace Engine`,
                 html: `
-                    <p class="text-justify">
-                        WSE является программным продуктом с <b>открытым исходным кодом</b>, распространяемым по лицензии MIT
-                        полностью <b>бесплатно</b>.
-                        Однако, стабильная поддержка проекта и разработка новых возможностей
-                        требует усилий, невозможных без должной финансовой поддержки.
-                    </p>
-
-                    <p class="text-justify">
-                        Мы принимаем пожертвования следующими способами:
-                    </p>
                     <div id="donate" class="my-2">
-                        <div class="row">
-                            <div class="col-12 col-md-6">
-                                <a href="https://yoomoney.ru/to/410011144467012" target="_blank" class="btn btn-link">
-                                    <img src="/assets/img/iomoney.png" style="height: 30px;" alt="yoomoney">
-                                </a>
-                            </div>
-                            <div class="col-6 col-md-3">
-                                <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#donate-bitcoin-cash">
-                                    <svg width="38" height="38" viewBox="0 0 38 38" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><circle fill="#8DC451" cx="19" cy="19" r="19"></circle><path d="M24.5 16.72c.37-.76.48-1.64.25-2.52-.75-2.76-2.84-3.98-5.58-3.25l-.89-3.32a.23.23 0 0 0-.28-.16l-1.32.35a.23.23 0 0 0-.16.27l.9 3.33-1.76.47-.9-3.32a.23.23 0 0 0-.27-.16l-1.32.35a.23.23 0 0 0-.16.28l.9 3.32-3.74 1a.23.23 0 0 0-.16.29l.35 1.32c.04.12.16.2.28.17l.22-.06c.97-.26 1.97.32 2.23 1.3l1.9 7.08c.25.93-.25 1.87-1.13 2.2a.23.23 0 0 0-.14.21l.02 1.43c0 .07.04.13.1.18.05.04.12.05.19.04l3.67-.99.9 3.33c.03.12.15.19.27.15l1.31-.35c.12-.03.2-.16.16-.28l-.88-3.32 1.75-.47.9 3.33c.03.12.15.19.27.15l1.32-.35c.12-.03.19-.16.16-.28l-.9-3.32.88-.24c2.75-.73 3.95-2.83 3.2-5.6a3.63 3.63 0 0 0-2.54-2.56zm-8.13-2.17l2.63-.7c.97-.26 1.97.32 2.23 1.3.27.97-.3 1.98-1.28 2.24l-2.63.7-.95-3.54zm5.88 7.91l-3.5.94-.96-3.54 3.51-.94c.97-.26 1.97.32 2.24 1.3.26.98-.32 1.98-1.29 2.24z" fill="#FFF"></path></g></svg>
-                                </button>
-                            </div>
-                            <div class="col-6 col-md-3">
-                                <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#donate-dogecoin">
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2000 2000" width="38" height="38"><g fill="#c2a633"><path d="M1024 659H881.12v281.69h224.79v117.94H881.12v281.67H1031c38.51 0 316.16 4.35 315.73-327.72S1077.44 659 1024 659z"/><path d="M1000 0C447.71 0 0 447.71 0 1000s447.71 1000 1000 1000 1000-447.71 1000-1000S1552.29 0 1000 0zm39.29 1540.1H677.14v-481.46H549.48V940.7h127.65V459.21h310.82c73.53 0 560.56-15.27 560.56 549.48 0 574.09-509.21 531.41-509.21 531.41z"/></g></svg>
-                                </button>
-                            </div>
-                        </div>
                         <div class="accordion-group">
-                            <div class="collapse" id="donate-bitcoin-cash" data-parent="#donate">
+                            <div class="collapse show" id="donate-description" data-parent="#donate">
+                                <p class="text-justify">
+                                    WSE является программным продуктом с <b>открытым исходным кодом</b>, распространяемым по лицензии MIT
+                                    полностью <b>бесплатно</b>.
+                                    Однако, стабильная поддержка проекта и разработка новых возможностей
+                                    требует усилий, невозможных без должной финансовой поддержки.
+                                </p>
+                                <p class="text-justify">
+                                    Если вы являетесь владельцем бизнеса который приносит доход, то спонсирование разработки WSE
+                                    имеет смысл с точки зрения пользы: <b>это гарантирует, что проект, на который полагается ваш
+                                    бизнес, остаётся здоровым и активно поддерживаемым</b>.
+                                </p>
+                                <p class="text-justify">
+                                    Если вы — индивидуальный разработчик и используете WSE эффективно и с удовольствием,
+                                    взгляните на пожертвование как на выражение признательности — как если бы вы угощали меня
+                                     кофе время от времени :)
+                                </p>
+                            </div>
+                            <div class="collapse" id="donate-binance" data-parent="#donate">
                                 <p class="p-0 m-0">
-                                    <b>Адрес Bitcoin Cash:</b><br>
+                                    <b>Имя сети Binance Smart Chain (BSC):</b><br>
+                                    <b>0x0f3fb971610793bfdd3cdb6a1bc633ea655ac672</b><br>
+                                    {{ qr_code('0x0f3fb971610793bfdd3cdb6a1bc633ea655ac672') }}
+
+                                    <a href="https://www.binance.com/ru/register?ref=78100838" target="_blank" class="btn btn-link">
+                                        Зарабатывайте криптомонеты вместе с Binance.
+                                    </a>
+                                </p>
+                            </div>
+                            <div class="collapse" id="donate-bitcoin" data-parent="#donate">
+                                <p class="p-0 m-0">
+                                    <b>Адрес Bitcoin и Bitcoin Cash:</b><br>
                                     <b>14FXuP69k5T2FsUTHNK8t1TcSaFyqpi9y5</b><br>
                                     {{ qr_code('14FXuP69k5T2FsUTHNK8t1TcSaFyqpi9y5') }}
                                 </p>
@@ -52,18 +54,28 @@
                                 </p>
                             </div>
                         </div>
-                    </div>
 
-                    <p class="text-justify">
-                        Если вы являетесь владельцем бизнеса который приносит доход, то спонсирование разработки WSE
-                        имеет смысл с точки зрения пользы: <b>это гарантирует, что проект, на который полагается ваш
-                        бизнес, остаётся здоровым и активно поддерживаемым</b>.
-                    </p>
-                    <p class="text-justify">
-                        Если вы — индивидуальный разработчик и используете WSE эффективно и с удовольствием,
-                        взгляните на пожертвование как на выражение признательности — как если бы вы угощали меня
-                         кофе время от времени :)
-                    </p>
+                        <p class="text-justify">
+                            Мы принимаем пожертвования следующими способами:
+                        </p>
+                        <div class="row">
+                            <div class="col-12 col-md-6">
+                                <a href="https://yoomoney.ru/to/410011144467012" target="_blank" class="btn btn-link">
+                                    <img src="/assets/img/iomoney.png" style="height: 30px;" alt="yoomoney">
+                                </a>
+                            </div>
+                            <div class="col-4 col-md-3">
+                                <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#donate-bitcoin">
+                                    <svg  width="38" height="38" viewBox="0.004 0 63.993 64" xmlns="http://www.w3.org/2000/svg"><path d="M63.04 39.741c-4.274 17.143-21.638 27.575-38.783 23.301C7.12 58.768-3.313 41.404.962 24.262 5.234 7.117 22.597-3.317 39.737.957c17.144 4.274 27.576 21.64 23.302 38.784z" fill="#f7931a"/><path d="M46.11 27.441c.636-4.258-2.606-6.547-7.039-8.074l1.438-5.768-3.512-.875-1.4 5.616c-.922-.23-1.87-.447-2.812-.662l1.41-5.653-3.509-.875-1.439 5.766c-.764-.174-1.514-.346-2.242-.527l.004-.018-4.842-1.209-.934 3.75s2.605.597 2.55.634c1.422.355 1.68 1.296 1.636 2.042l-1.638 6.571c.098.025.225.061.365.117l-.37-.092-2.297 9.205c-.174.432-.615 1.08-1.609.834.035.051-2.552-.637-2.552-.637l-1.743 4.02 4.57 1.139c.85.213 1.683.436 2.502.646l-1.453 5.835 3.507.875 1.44-5.772c.957.26 1.887.5 2.797.726L27.504 50.8l3.511.875 1.453-5.823c5.987 1.133 10.49.676 12.383-4.738 1.527-4.36-.075-6.875-3.225-8.516 2.294-.531 4.022-2.04 4.483-5.157zM38.087 38.69c-1.086 4.36-8.426 2.004-10.807 1.412l1.928-7.729c2.38.594 10.011 1.77 8.88 6.317zm1.085-11.312c-.99 3.966-7.1 1.951-9.083 1.457l1.748-7.01c1.983.494 8.367 1.416 7.335 5.553z" fill="#fff"/></svg>
+                                </button>
+                            </div>
+                            <div class="col-4 col-md-3">
+                                <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#donate-dogecoin">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2000 2000" width="38" height="38"><g fill="#c2a633"><path d="M1024 659H881.12v281.69h224.79v117.94H881.12v281.67H1031c38.51 0 316.16 4.35 315.73-327.72S1077.44 659 1024 659z"/><path d="M1000 0C447.71 0 0 447.71 0 1000s447.71 1000 1000 1000 1000-447.71 1000-1000S1552.29 0 1000 0zm39.29 1540.1H677.14v-481.46H549.48V940.7h127.65V459.21h310.82c73.53 0 560.56-15.27 560.56 549.48 0 574.09-509.21 531.41-509.21 531.41z"/></g></svg>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
                 `,
                 showCancelButton: true,
                 showConfirmButton: false,
