--- a/src/Template/cup/navigation.twig
+++ b/src/Template/cup/navigation.twig
@@ -178,7 +178,7 @@
         </li>
 
         <li class="nav-item">
-            <a href="https://github.com/0x12f/platform/wiki" target="_blank">
+            <a href="https://github.com/getwebspace/platform/wiki" target="_blank">
                 <i class="fas fa-book"></i>
                 <p>Документация</p>
             </a>
