--- a/src/Template/layout.twig
+++ b/src/Template/layout.twig
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="{{ parameter('common_lang', 'ru') }}">
-    <!-- OpenSource WebSpace Engine CMS (Full free for all) Powered by 0x12f Team -->
-    <!-- GitHub: https://github.com/0x12f -->
+    <!-- OpenSource WebSpace Engine CMS (Full free for all) -->
+    <!-- GitHub: https://github.com/getwebspace -->
 
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="generator" content="OpenSource WebSpace Engine CMS (Full free for all) Powered by 0x12f Team" />
+        <meta name="generator" content="OpenSource WebSpace Engine CMS" />
 
         {% block head '' %}
         {% block style '' %}
