--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -334,7 +334,7 @@
                                                                         <th width="50%">Версия движка:</th>
                                                                         <td width="50%" class="text-center">
                                                                             {{ properties.version.branch }}
-                                                                            (<a href="https://github.com/0x12f/platform/tree/{{ properties.version.commit }}" target="_blank">source</a>)
+                                                                            (<a href="https://github.com/getwebspace/platform/tree/{{ properties.version.commit }}" target="_blank">source</a>)
                                                                         </td>
                                                                     </tr>
                                                                     <tr>
@@ -425,7 +425,7 @@
                             <nav class="pull-left">
                                 <ul class="nav">
                                     <li class="nav-item">
-                                        <a class="nav-link" href="https://github.com/0x12f/platform" target="_blank">
+                                        <a class="nav-link" href="https://github.com/getwebspace/platform" target="_blank">
                                             GitHub
                                         </a>
                                     </li>
@@ -433,9 +433,7 @@
                             </nav>
                             <div class="copyright ml-auto">
                                 Copyright &copy; {{ 'now'|df('Y') }} All rights reserved |
-                                Powered by
-                                <a href="https://alksily.0x12f.com" target="_blank">Aleksey Ilyin</a>,
-                                <a href="https://github.com/0x12f" target="_blank">0x12f.com</a>
+                                Powered by <a href="https://getwebspace.org" target="_blank">WebSpace</a>
                             </div>
                         </div>
                     </footer>
