fix footer text

--- a/theme/default/common/footer.twig
+++ b/theme/default/common/footer.twig
@@ -81,8 +81,8 @@
             </div>
 
             <p class="text-white text-center mt-5">
-                Copyright &copy;<script>document.write(new Date().getFullYear());</script>
-                All rights reserved
+                Сайт работает под управлением <a href="https://getwebspace.org">WebSpace Engine.</a>
+                © {{ df('now', 'Y') }}
             </p>
         </div>
     </div>
