--- a/src/Template/cup/field.twig
+++ b/src/Template/cup/field.twig
@@ -104,7 +104,7 @@
             </div>
 
             {% if error %}
-                <label class="error" for="{{ label }}">{{ _error[name] }}</label>
+                <label class="error" for="{{ label }}">{{ _(_error[name]) }}</label>
             {% endif %}
 
             {% if message is not empty %}
