--- a/src/Template/mixin/form.twig
+++ b/src/Template/mixin/form.twig
@@ -58,7 +58,7 @@
         {% endif %}
 
         {% if error %}
-            <label class="error" for="{{ label }}">{{ _error[name] }}</label>
+            <label class="error" for="{{ label }}">{{ _(_error[name]) }}</label>
         {% endif %}
 
         {% if message is not empty %}
