--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -137,10 +137,11 @@
                                     <div class="col-md-12">
                                         <div class="card bg-danger">
                                             <div class="card-header text-center">
-                                                <h4 class="card-title text-white">В форме есть ошибки ({{ _error|count }})</h4>
+                                                <h4 class="card-title text-white">Обнаружены ошибки ({{ _error|count }})</h4>
                                                 <p class="text-white my-0">
-                                                    Проверьте форму на наличие подсвеченных красным полей,
-                                                    исправьте ошибку и попробуйте снова.
+                                                    В форме обнаружены ошибки, пожалуйста,
+                                                    проверьте подсвеченные красным поля,
+                                                    исправьте ошибки и попробуйте снова.
                                                 </p>
                                             </div>
                                         </div>
