add more exceptions and fixes

--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -140,7 +140,7 @@
                                                 <h4 class="card-title text-white">Обнаружены ошибки ({{ _error|count }})</h4>
                                                 <p class="text-white my-0">
                                                     В форме обнаружены ошибки, пожалуйста,
-                                                    проверьте подсвеченные красным поля,
+                                                    проверьте поля выделенные красным цветом,
                                                     исправьте ошибки и попробуйте снова.
                                                 </p>
                                             </div>
